--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+.scrollable-container{
+  overflow: scroll;
+  height: 25em;
+  width: 100%;
+  scrollbar-width: none;
+  box-shadow: 2px 2px 12px  #50555f;
+  background-color:#50555f;
 }
+.avatar-rounded{
+  border-radius:50%;
+  height: 50%;
+  width:50%;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.display-avatar{
+  display:"inline-block";
+  float: "left";
 }
-
+.display-author{
+  display:"inline-block";
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  height: 100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /*
+  
+  font-size: calc(10px + 2vmin);*/
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
