--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import '~antd/dist/antd.css';
 .scrollable-container{
   overflow: scroll;
   height: 25em;
@@ -5,6 +6,7 @@
   scrollbar-width: none;
   box-shadow: 2px 2px 12px  #50555f;
   background-color:#50555f;
+ 
 }
 .avatar-rounded{
   border-radius:50%;
@@ -31,6 +33,11 @@
   /*
   
   font-size: calc(10px + 2vmin);*/
+  color: white;
+}
+.app-container{
+  background-color: #282c34;
+ 
   color: white;
 }
 
